# agentic-framework

./: .env.example  .gitattributes  .gitignore  BLOG_PART_1_ARCHITECTURE.md  BLOG_PART_2_MEMORY.md  BLOG_PART_3_GOVERNANCE.md  BLOG_PLAN_BUSINESS_ADOPTION.md  BLOG_PUBLICATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agentctl/: config.yaml  external_mcp_servers.yaml  llm.yaml  websearch.json
.agentctl/content_plans/: 3043a959-1ce.json  748d67ed-c67.json  8d19f51a-dbc.json
.github/workflows/: ci.yml
adapters/: __init__.py
adapters/llm/: __init__.py  anthropic.py  azure.py  base.py  factory.py  gemini.py  local.py  mock.py  openai.py  vllm.py
adapters/tests/: __init__.py  test_llm_adapters.py
code-exec/: .env.example  Dockerfile  README.md  pytest.ini  run.sh
code-exec/service/: __init__.py  config.py  executor.py  main.py  models.py  registry.py  skill_parser.py  skill_registry.py  test_skill_parser.py
code-exec/skills/: __init__.py
code-exec/tests/: __init__.py  test_executor.py
docs/: api-reference.md  cli-usage.md  manifests.md  mcp.md  skills.md
docs/schema_registry/: .gitkeep  README.md  claim_verification.json  code_patch.json  manifest.json  provenance.json  research_snippet.json
docs/schemas/: manifest_schema.json
examples/: README.md
examples/01-simple-agent/: README.md  run.py
examples/02-multi-step-workflow/: README.md  run.py  workflow.yaml
examples/03-custom-skill/: README.md  run.py
examples/04-mcp-integration/: README.md  mcp_config.yaml  run.py
examples/animations/: ANIMATION_INTEGRATION_EXAMPLE.py
mcp-gateway/: Dockerfile  README.md  run.sh  start.sh
mcp-gateway/examples/: client_example.py
mcp-gateway/service/: __init__.py  auth.py  catalog.py  config.py  main.py  mcp_client.py  models.py  proxy.py  rate_limit.py
mcp-gateway/tests/: __init__.py  test_gateway.py
memory-service/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pytest.ini  requirements.txt  run.sh
memory-service/alembic/: env.py
memory-service/examples/: client_example.py
memory-service/service/: __init__.py  config.py  embedding.py  main.py  models.py  tasks.py
memory-service/tests/: __init__.py  test_compaction.py  test_memory.py  test_summarization.py  test_tasks.py
orchestrator/: Dockerfile  README.md  __init__.py  run_service.py  run_service.sh
orchestrator/manifests/: customer-support-workflow.yaml  simple-research-workflow.yaml
orchestrator/service/: __init__.py  approvals.py  config.py  main.py  models.py  workflow_engine.py
orchestrator/tests/: __init__.py  (+2 more)
scripts/: activate.sh  load_env.sh  run_subagent_manager.sh  start_mcp_gateway.sh  test_subagent_manager.sh
subagent-manager/: Dockerfile  README.md  __init__.py
tools/agentctl/: MCP_QUICK_START.md  README.md  diagnose_websearch.sh  pyproject.toml  run.sh  test_agentic_loop.py  test_consistency_fixes.py  test_executor_integration.py  test_gateway_autostart.py  test_llm_config.py  test_llm_setup.py  test_max_iterations.py  test_new_packages.py  test_package_install_real.py  test_safe_package_install.py  test_safe_package_simple.py  test_token_tracking.py  test_tool_call_history_fix.py  test_websearch.py
tools/agentctl/agentctl/: __init__.py  __main__.py  animations.py  animations_demo.py  cli.py  config.py  gateway_manager.py  interactive.py  iteration_display.py  iteration_status.py  llm_client.py  llm_validation_enhanced.py  mcp_gateway_client.py  mcp_sync.py  safe_package_manager.py  tool_executor.py
tools/agentctl/agentctl/commands/: __init__.py  agent.py  init.py  llm.py  manifest.py  mcp.py  runtime.py  skill.py
tools/agentctl/agentctl/memory/: __init__.py  manager.py  models.py  session.py  storage.py  working.py
tools/agentctl/docs/: MEMORY_ARCHITECTURE.md
tools/agentctl/examples/: firecrawl_local_mcp_server.yaml  firecrawl_mcp_server.yaml  test_external_mcp_integration.py
tools/agentctl/scripts/: README.md  update_mcp_server.sh
tools/agentctl/tests/: __init__.py  test_cli.py
tools/kautilya/: MANUAL_TEST_INSTRUCTIONS.md  MCP_QUICK_START.md  README.md  TEST_RESULTS_SUMMARY.md  diagnose_websearch.sh  pyproject.toml  requirements.txt  run.sh  test_agentic_loop.py  test_consistency_fixes.py  test_executor_integration.py  test_gateway_autostart.py  test_live_interactive.py  test_llm_config.py  test_llm_setup.py  test_max_iterations.py  test_new_packages.py  test_package_install_real.py  test_pdf_fix.py  test_safe_package_install.py  test_safe_package_simple.py  test_token_tracking.py  test_tool_call_history_fix.py  test_user_query_simulation.py  test_websearch.py
tools/kautilya/.agentctl/: llm.yaml
tools/kautilya/.agentctl/content_plans/: be700ce7-bd3.json  bee55ef7-431.json
tools/kautilya/docs/: MEMORY_ARCHITECTURE.md
tools/kautilya/examples/: external_mcp_servers_example.yaml  firecrawl_local_mcp_server.yaml  firecrawl_mcp_server.yaml  test_external_mcp_integration.py
tools/kautilya/kautilya/: __init__.py  __main__.py  agentic_executor.py  animations.py  animations_demo.py  cli.py  config.py  gateway_manager.py  interactive.py  iteration_display.py  iteration_status.py  llm_client.py  llm_validation_enhanced.py  mcp_gateway_client.py  mcp_sync.py  safe_package_manager.py  tool_executor.py
tools/kautilya/kautilya/agent/: __init__.py  capability_registry.py  core.py  error_recovery.py  file_resolver.py  integration.py  output_validator.py  react_loop.py  session_memory.py  task_planner.py
tools/kautilya/kautilya/commands/: __init__.py  agent.py  init.py  llm.py  manifest.py  mcp.py  runtime.py  skill.py
tools/kautilya/kautilya/memory/: __init__.py  manager.py  models.py  session.py  storage.py  working.py
tools/kautilya/scripts/: README.md  update_mcp_server.sh
tools/kautilya/tests/: __init__.py  test_cli.py
tools/kautilya/tests/test_agent/: __init__.py  test_capability_registry.py  test_error_recovery.py  test_file_resolver.py  test_integration.py  test_output_validator.py  test_session_memory.py  test_task_planner.py
(+103 files in other folders)
